ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts.stderr
error[1357]: An enum member name must be followed by a ',', '=', or '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:2:12
  |
2 | enum E3 { a: 1, }
  |            ^

error[1357]: An enum member name must be followed by a ',', '=', or '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:3:15
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |               ^

error[1357]: An enum member name must be followed by a ',', '=', or '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/EnumDeclarations/parserEnum5/input.ts:3:24
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                        ^

